--- a/resume_proj/resume_app/templates/objandskill.html
+++ b/resume_proj/resume_app/templates/objandskill.html
@@ -44,7 +44,7 @@
     <br>
     <h2>Objective</h2>
     <div class="mb-3">
-        <form action="/objandskill" method="POST" id="ojandskill">
+        <form action="/objandskill" method="POST" id="objandskill">
         {% csrf_token %}
         <label for="content" class="form-label">A resume objective is a statement of your
             professional goals as they relate to the job you are applying for, and it is usually listed at the
