--- a/resume_proj/resume_app/templates/education.html
+++ b/resume_proj/resume_app/templates/education.html
@@ -83,33 +83,94 @@
                 <option value="Y">Yes</option>
                 <option value="N">No</option>
             </select>
-        </div>    
-        <div class="d-grid gap-2 col-2 mx-auto" id="btm_btn">
-            <button class="btn btn-primary" id="submit" type="submit">Add Education</button>
-        </div>  
+        </div>
+        <div class="edu_form">
+            <div class="row">
+                <div class="col">
+                    <label for="date_from1" class="form-label">Date Completed or, if still attending, today's date</label>
+                    <input type="date" class="form-control" id="edu_from" name="date_from1">
+                </div>
+            </div>
+            <div class="mb-3" id="title_div">
+                <label for="school1" class="form-label">School Name</label>
+                <input type="text" class="form-control" id="edu_title" name="school1">
+            </div>
+            <div class="mb-3">
+                <label for="program1" class="desc-form-label">Program/Degree <span>(ex: Bachelor of Science in Aeronautics)</span></label>
+                <input type="text" class="form-control" id="edu_program" name="program1">
+            </div>
+            <select class="form-select" aria-label="Default select example" name="grad1">
+                <option selected>Did you graduate?</option>
+                <option value="Y">Yes</option>
+                <option value="N">No</option>
+            </select>
+        </div>
+        <div class="edu_form">
+            <div class="row">
+                <div class="col">
+                    <label for="date_from2" class="form-label">Date Completed or, if still attending, today's date</label>
+                    <input type="date" class="form-control" id="edu_from" name="date_from2">
+                </div>
+            </div>
+            <div class="mb-3" id="title_div">
+                <label for="school2" class="form-label">School Name</label>
+                <input type="text" class="form-control" id="edu_title" name="school2">
+            </div>
+            <div class="mb-3">
+                <label for="program2" class="desc-form-label">Program/Degree <span>(ex: Bachelor of Science in Aeronautics)</span></label>
+                <input type="text" class="form-control" id="edu_program" name="program2">
+            </div>
+            <select class="form-select" aria-label="Default select example" name="grad2">
+                <option selected>Did you graduate?</option>
+                <option value="Y">Yes</option>
+                <option value="N">No</option>
+            </select>
+        </div>
+        <div class="edu_form">
+            <div class="row">
+                <div class="col">
+                    <label for="date_from3" class="form-label">Date Completed or, if still attending, today's date</label>
+                    <input type="date" class="form-control" id="edu_from" name="date_from3">
+                </div>
+            </div>
+            <div class="mb-3" id="title_div">
+                <label for="school3" class="form-label">School Name</label>
+                <input type="text" class="form-control" id="edu_title" name="school3">
+            </div>
+            <div class="mb-3">
+                <label for="program3" class="desc-form-label">Program/Degree <span>(ex: Bachelor of Science in Aeronautics)</span></label>
+                <input type="text" class="form-control" id="edu_program" name="program3">
+            </div>
+            <select class="form-select" aria-label="Default select example" name="grad3">
+                <option selected>Did you graduate?</option>
+                <option value="Y">Yes</option>
+                <option value="N">No</option>
+            </select>
+        </div>
+        <div class="edu_form">
+            <div class="row">
+                <div class="col">
+                    <label for="date_from4" class="form-label">Date Completed or, if still attending, today's date</label>
+                    <input type="date" class="form-control" id="edu_from" name="date_from4">
+                </div>
+            </div>
+            <div class="mb-3" id="title_div">
+                <label for="school4" class="form-label">School Name</label>
+                <input type="text" class="form-control" id="edu_title" name="school4">
+            </div>
+            <div class="mb-3">
+                <label for="program4" class="desc-form-label">Program/Degree <span>(ex: Bachelor of Science in Aeronautics)</span></label>
+                <input type="text" class="form-control" id="edu_program" name="program4">
+            </div>
+            <select class="form-select" aria-label="Default select example" name="grad4">
+                <option selected>Did you graduate?</option>
+                <option value="Y">Yes</option>
+                <option value="N">No</option>
+            </select>
+        </div>           
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <a class="btn btn-primary" href="/additionalpage" role="button" id="next_page">Next page - Additional</a>
-        </div>   
+            <button type="submit" class="btn btn-primary">Next page - Additional</button>
+        </div>    
         </form>
     </div>
-    {% if user.educations.all %}
-    <div id="emp_table">
-        <table style="width: fit-content;" class="table table-bordered">
-            <tr>
-                <th>Completed</th>
-                <th>School</th>
-                <th>Program/Degree</th>
-                <th>Graduated?</th>
-            </tr>
-            {% for education in user.educations.all %}
-            <tr>
-                <td>{{ education.date_from|date:"M y" }}</td>
-                <td>{{ education.school }}</td>
-                <td>{{ education.program }}</td>
-                <td>{{ education.grad }}</td>
-            </tr>
-            {% endfor %}
-        </table>
-    </div>  
-    {% endif %}
 </body>
