--- a/resume_proj/resume_app/templates/preview.html
+++ b/resume_proj/resume_app/templates/preview.html
@@ -49,12 +49,16 @@
             <p><a href="/template1/{{user.id}}" id="temp_one" role="button">Template 1</a></p>
         </div>
         <div class="temp_two">
-            <img src="{% static 'img/Background_picture_template_v2.jpg' %}" class="mx-auto d-block" alt="Template 2" id="second_pic">
+            <img src="{% static 'img/Background_picture_template2_v2.jpg' %}" class="mx-auto d-block" alt="Template 2" id="second_pic">
             <p><a href="/template2/{{user.id}}" id="temp_one" role="radio">Template 2</a></p>
         </div>
         <div class="temp_three">
             <img src="{% static 'img/Background_picture_template_v2.jpg' %}" class="mx-auto d-block" alt="Template 2" id="third_pic">
             <p><a href="/template3/{{user.id}}" id="temp_one" role="radio">Template 3</a></p>
+        </div>
+        <div class="temp_four">
+            <img src="{% static 'img/Background_picture_template_v2.jpg' %}" class="mx-auto d-block" alt="Template 2" id="third_pic">
+            <p><a href="/template4/{{user.id}}" id="temp_one" role="radio">Template 4</a></p>
         </div>
     </div>
 </body>
